compiler/src/test/resources/golden/errors/type_map_key_float.dawn
use std/map

fn f() -> Int = {
  var m: Map[Float, Int] = map.empty()
  m = map.insert(m, 1.5, 1)
  map.size(m)
}
