compiler/src/test/resources/golden/errors/type_map_key_float.err
error: `Float` cannot be part of a Map/Set key type: NaN and -0.0 give Float two different equalities, so no hash can agree with `==`
  --> type_map_key_float.dawn:4:14
  |
4 |   var m: Map[Float, Int] = map.empty()
  |              ^^^^^
  = hint: key by an Int encoding (scaled integer, bits) or a String rendering instead
